<resources>
    <string name="app_name">Balanjo</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="img_desc">App Logo</string>
    <string name="create_acc_btn_text">Create Account</string>
    <string name="username_editText">Username</string>
    <string name="email_editText">Email Address</string>
    <string name="password_editText">Password</string>
    <string name="remember_me_chkb">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout_btn_text">Logout</string>
    <string name="admin_textView">Im an Admin?</string>
    <string name="notAdmin_textView">Not an Admin?</string>
    <string name="add_new_product_textView">Add New Product</string>
    <string name="product_name_editText">Product Name</string>
    <string name="product_description_editText">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_product_button">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
