<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProductActivity">
    
    <ImageView
        android:id="@+id/select_camera_imageView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_photo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/product_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_camera_imageView"
        android:inputType="textMultiLine"
        android:background="@drawable/input_design"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/product_name_editText"/>

    <EditText
        android:id="@+id/product_description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name_editText"
        android:inputType="textMultiLine"
        android:background="@drawable/input_design"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/product_description_editText"/>

    <EditText
        android:id="@+id/product_price_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description_editText"
        android:inputType="textMultiLine"
        android:background="@drawable/input_design"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:hint="@string/product_price"/>

    <Button
        android:id="@+id/add_new_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price_editText"
        android:padding="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/add_product_button"
        android:textSize="18sp"
        android:background="@drawable/buttons"/>

</RelativeLayout>